# scikit-sundae

./: .gitignore  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  SUNDIALS_LICENSE.txt  noxfile.py  pyproject.toml  setup.py  sparse_pattern.py  sparse_test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/linters/: .codespellrc  .flake8
.github/workflows/: ci.yml  release.yml
docs/jupyter_execute/examples/: robertson.ipynb  van_der_pol.ipynb
docs/jupyter_execute/user_guide/: basic_tutorial.ipynb
docs/source/: conf.py  index.rst
docs/source/_static/: switcher.json
docs/source/api/: index.rst
docs/source/api/sksundae/: index.rst
docs/source/api/sksundae/common/: index.rst
docs/source/api/sksundae/cvode/: index.rst
docs/source/api/sksundae/ida/: index.rst
docs/source/api/sksundae/utils/: index.rst
docs/source/development/: code_of_conduct.rst  code_style_and_linting.rst  conventions.rst  debugging.rst  development_environments.rst  discussions.rst  environment.rst  index.rst  issues_and_features.rst  layout.rst  patterns_and_conventions.rst  project_layout.rst  project_overview.rst  review.rst  review_process.rst  style.rst  tests.rst  tests_and_coverage.rst  version_control.rst
docs/source/examples/: index.rst  robertson.ipynb  van_der_pol.ipynb
docs/source/templates/: navbar-logo.html
docs/source/user_guide/: dae.rst  dae_overview.rst  event_functions.rst  events.rst  explicit_jacobians.rst  index.rst  installation.rst  ivp.rst  ivp_overview.rst  jacobians.rst  linear_solvers.rst  ode.rst  ode_overview.rst  what.rst  what_is_sksundae.rst
environments/: ci_environment.yml  rtd_environment.yml
inprogress/: getfullargspec.py
scripts/: install_sundials_linux.sh  version_checker.py
src/sksundae/: __init__.py  _cy_common.pyx  _cy_cvode.pyx  _cy_ida.pyx  c_cvode.pxd  c_ida.pxd  c_sundials.pxd  c_sunlinsol.pxd  common.py  cvode.py  ida.py  jacband.py  precond.py  utils.py
src/sksundae/cvode/: __init__.py  _precond.py  _solver.py
src/sksundae/ida/: __init__.py  _precond.py  _solver.py
tests/: test_common.py  test_cvode.py  test_cvode_iterative.py  test_cvode_lapack.py  test_cvode_sparse.py  test_ida.py  test_ida_iterative.py  test_ida_lapack.py  test_ida_sparse.py  test_jacband.py  test_robertson.py  test_signatures.py  test_van_der_pol.py
tests/C_programs/robertson/: Makefile  main.c  output.csv
tests/C_programs/van_der_pol/: Makefile  main.c  output.csv
