# pyproject.toml

[build-system]
requires = ["setuptools", "cython>=3", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-sundae"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9,<3.14"
license = { file = "LICENSE" }
description = "SUNDIALS bindings to differential aglebraic equation solvers."
authors = [
    { name = "Corey R. Randall" },
    { email = "corey.randall@nrel.gov" },
]
maintainers = [
    { name = "Corey R. Randall" },
     { email = "corey.randall@nrel.gov" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["numpy"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "sksundae.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "nox",
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "genbadge[all]",
    "codespell",
    "flake8",
    "autopep8",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-design",
    "sphinx-favicon",
    "sphinx-copybutton",
    "myst-nb",
    "pydata-sphinx-theme",
]

[project.urls]
Homepage = "https://github.com/NREL/scikit-sundae"
Documentation = "https://example.com"
Repository = "https://github.com/NREL/scikit-sundae"
Issues = "https://github.com/NREL/scikit-sundae/issues"
