# pyproject.toml

[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-sundae"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9,<3.14"
license = { file = "LICENSE" }
description = "SUNDIALS bindings to differential aglebraic equation solvers."
keywords = ["sundials", "dae", "ode", "integrator", "ivp"]
authors = [
    { name = "Corey R. Randall" },
    { email = "corey.randall@nrel.gov" },
]
maintainers = [
    { name = "Corey R. Randall" },
    { email = "corey.randall@nrel.gov" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["numpy"]

[tool.setuptools]
include-package-data = true
license-files = [
    "NOTICE*",
    "AUTHORS*",
    "COPYING*",
    "LICENSE*",
    "SUNDIALS_LICENSE",
]

[tool.setuptools.dynamic]
version = {attr = "sksundae.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "matplotlib",
]
tests = [
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "nox",
    "flake8",
    "autopep8",
    "codespell",
    "genbadge[all]",
    "scikit-sundae[docs,tests]",
]

[project.urls]
Homepage = "https://github.com/NREL/scikit-sundae"
Documentation = "https://scikit-sundae.readthedocs.io/"
Repository = "https://github.com/NREL/scikit-sundae"
Issues = "https://github.com/NREL/scikit-sundae/issues"
